# startup-in-a-box

./: .dockerignore  .env.docker.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE.md  README.md  docker-compose.cheap.yml  docker-compose.yml
factory/: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  pyproject.toml
factory/skills/external-apis/: SKILL.md
factory/skills/stripe-checkout/: SKILL.md
factory/skills/vercel-neon/: SKILL.md
factory/src/factory/: __init__.py  agent_flow_events.py  factory_event_broker.py  logging_config.py  logging_context.py  quality_hooks.py  runner.py  server.py  settings.py  stream.py  subagents.py  transcript_tail.py  validation.py
factory/tests/: conftest.py  test_health.py  test_quality_hooks.py  test_runner.py  test_stream.py  test_validation.py
orchestrator/: .dockerignore  .env.example  Dockerfile  pyproject.toml
orchestrator/adk_apps/brand_designer/: agent.py
orchestrator/adk_apps/business_planner/: agent.py
orchestrator/adk_apps/ceo/: agent.py
orchestrator/adk_apps/cto/: agent.py
orchestrator/src/orchestrator/: __init__.py  logging_config.py  logging_context.py  pipeline_stream.py  server.py  settings.py
orchestrator/src/orchestrator/agents/: __init__.py  _common.py  _model.py  brand_designer.py  business_planner.py  callbacks.py  ceo.py  cto.py  data_structurer.py  market_analyst.py  (+3 more)
orchestrator/tests/: conftest.py  test_artifacts.py  test_delegate_tool.py  test_handoff_choreographer.py  test_health.py  test_planning_pipeline.py  test_sse_client.py
(+231 files in other folders)
